--- a/failure.html
+++ b/failure.html
@@ -8,12 +8,12 @@
   </head>
   <body>
     <div class="jumbotron">
-  <h1 class="display-4">You're fucking LOSER! Please try again later)))</h1>
-  <p class="lead">Thank you for being intarested in our project.</p>
+  <h1 class="display-4">Error</h1>
+  <p class="lead">An error occured</p>
   <hr class="my-4">
-  <p>Soon it will be more information.</p>
+  <p>Try again later</p>
   <form  action="/failure" method="post">
-    <button class="btn btn-warning btn-lg" type="submit" name="button">Don't push it!!</button>
+    <button class="btn btn-warning btn-lg" type="submit" name="button">Retry</button>
   </form>
 </div>
   </body>
